<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/happy"
    tools:context=".InOutScreen">

    <ImageView
        android:id="@+id/inout_img1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/title"
        android:src="@mipmap/inoutlogf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="190dp"
        android:layout_height="42dp"
        android:layout_marginTop="152dp"
        android:contentDescription="@string/title"
        app:layout_constraintEnd_toEndOf="@+id/inout_img1"
        app:layout_constraintStart_toStartOf="@+id/inout_img1"
        app:layout_constraintTop_toTopOf="@+id/inout_img1"
        app:srcCompat="@drawable/ic_demo" />


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="199dp"
        android:layout_height="21dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/title"
        app:layout_constraintBottom_toBottomOf="@+id/inout_img1"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.007"
        app:srcCompat="@mipmap/createin" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/si3"
        android:textColor="@color/black"
        android:fontFamily="@font/baumans"
        android:transitionName="txt_transition"
        app:layout_constraintBottom_toBottomOf="@+id/inout_img1"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.361" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login7"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />


</androidx.constraintlayout.widget.ConstraintLayout>