<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@mipmap/inout_logo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ForgetPassword">


    <ImageView
        android:id="@+id/reset_img2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/curve_forget" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reset_textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="272dp"
        android:layout_height="54dp"
        app:layout_constraintBottom_toBottomOf="@+id/reset_img2"
        app:layout_constraintEnd_toEndOf="@+id/reset_img2"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="@+id/reset_img2"
        app:layout_constraintTop_toTopOf="@+id/reset_img2"
        app:layout_constraintVertical_bias="0.605"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="@dimen/font_14" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/title"
        app:layout_constraintBottom_toBottomOf="@+id/reset_img2"
        app:layout_constraintEnd_toEndOf="@+id/reset_textInputLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/reset_textInputLayout"
        app:layout_constraintTop_toTopOf="@+id/reset_img2"
        app:layout_constraintVertical_bias="0.528"
        app:srcCompat="@mipmap/ic_email_black_18dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baumans"

        android:text="@string/Email"
        android:textColor="@color/black"
        android:textSize="@dimen/font_10"
        android:paddingStart="@dimen/margin5dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
        app:layout_constraintEnd_toEndOf="@+id/reset_textInputLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="@+id/imageView12"
        app:layout_constraintVertical_bias="0.73"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/reset_textView9"
        android:layout_width="101dp"
        android:layout_height="14dp"
        android:text="@string/cannotbe"
        android:textAlignment="center"
        android:fontFamily="@font/baumans"
        android:textColor="@color/red1"
        android:visibility="invisible"
        android:textSize="@dimen/font_10"
        app:layout_constraintBottom_toBottomOf="@+id/reset_img2"
        app:layout_constraintEnd_toEndOf="@+id/reset_textInputLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/reset_textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/reset_textInputLayout"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/reset_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="60dp"
        android:layout_height="17dp"
        android:layout_marginTop="8dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/reset_img2"
        app:layout_constraintEnd_toEndOf="@+id/reset_textInputLayout"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/reset_textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/reset_textInputLayout"
        app:layout_constraintVertical_bias="0.04" />

    <ImageView
        android:id="@+id/reset_imageView14"
        android:layout_width="189dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/reset_img2"
        app:layout_constraintEnd_toEndOf="@+id/reset_textInputLayout"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/reset_textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/reset_progressBar"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/signin_btn_logo" />

    <TextView
        android:id="@+id/reset_textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/baumans"
        android:text="@string/loginnow"
        android:textColor="@color/nin"
        android:textSize="@dimen/font_11"
        app:layout_constraintBottom_toBottomOf="@+id/reset_img2"
        app:layout_constraintEnd_toEndOf="@+id/reset_textInputLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/reset_textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/reset_imageView14"
        app:layout_constraintVertical_bias="0.65" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baumans"
        android:text="@string/forget"
        android:textColor="@color/nin"
        android:textSize="@dimen/size16sp"
        app:layout_constraintBottom_toTopOf="@+id/reset_textInputLayout"
        app:layout_constraintEnd_toEndOf="@+id/reset_textInputLayout"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/reset_textInputLayout"
        app:layout_constraintTop_toTopOf="@+id/reset_img2"
        app:layout_constraintVertical_bias="0.743" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baumans"
        android:text="@string/re"
        android:textColor="@color/background"
        android:textSize="@dimen/font_11"
        app:layout_constraintBottom_toBottomOf="@+id/reset_imageView14"
        app:layout_constraintEnd_toEndOf="@+id/reset_imageView14"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/reset_imageView14"
        app:layout_constraintTop_toBottomOf="@+id/reset_progressBar"
        app:layout_constraintVertical_bias="0.571" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/reset_progressBar"
        app:layout_constraintEnd_toEndOf="@+id/reset_progressBar"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="@+id/reset_textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/reset_textInputLayout"
        app:layout_constraintVertical_bias="0.573"
        app:srcCompat="@mipmap/emailvar11" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baumans"
        android:paddingStart="@dimen/margin5dp"
        android:text="@string/recovery"
        android:visibility="invisible"
        android:textColor="@color/recovery"
        android:textSize="@dimen/font_11"
        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
        app:layout_constraintEnd_toStartOf="@+id/reset_textView9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView15"
        app:layout_constraintTop_toBottomOf="@+id/reset_textInputLayout"
        app:layout_constraintVertical_bias="0.886"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
        app:layout_constraintEnd_toEndOf="@+id/imageView15"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView15"
        app:layout_constraintTop_toTopOf="@+id/imageView15"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@mipmap/emailver3" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/failed"
        android:fontFamily="@font/baumans"
        android:textSize="@dimen/font_11"
        android:textColor="@color/red1"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/reset_progressBar"
        app:layout_constraintEnd_toEndOf="@+id/textView20"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toEndOf="@+id/imageView15"
        app:layout_constraintTop_toTopOf="@+id/textView20"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>